include $(top_srcdir)/common.mk

nobase_include_HEADERS = \
	tomtix/yaml.h \
	tomtix/util.h \
	tomtix/treap.h \
	tomtix/error.h \
	tomtix/math.h \
	tomtix/graph_utils.h \
	tomtix/compiler.h \
	tomtix/sorting.h \
	tomtix/uleb128.h \
	tomtix/partition.h \
	tomtix/graph.h \
	tomtix/stack.h \
	tomtix/heap.h \
	tomtix/md5.h \
	tomtix/tree.h \
	tomtix/token.h \
	tomtix.h
